8259398: Super word not applied to a loop with byteArrayViewVarHandle